--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.66"
 byteorder = "1"
+flate2 = "1.0.24"
+reqwest = { version = "0.11.13", features = ["blocking"] }
