--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ edition = "2021"
 anyhow = "1.0.66"
 byteorder = "1"
 flate2 = "1.0.24"
+rand = "0.8.5"
 reqwest = { version = "0.11.13", features = ["blocking"] }
